--- a/index.html
+++ b/index.html
@@ -3,11 +3,51 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Pick Your Travel</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+    <link rel="stylesheet" href="css/styles.css">
 </head>
 <body>
+    <header>
+        <div class="logo-container">
+            <img src="images/airplane.png" alt="Logo" class="logo">
+            <h1 class="logo-text">Pick Your Travel</h1>
+        </div>
+        <nav>
+            <ul>
+                <li><a href="index.html">Home</a></li>
+                <li><a href="#about">About Us</a></li>
+                <li><a href="#services">Tour Packages</a></li>
+                <li><a href="#contact">Contact</a></li>
+            </ul>
+        </nav>
+    </header>
+    <section class="section-main">
+        <div class="section-content">
+            <h2>Explore the World with Us</h2>
+            <p>Discover amazing destinations and create unforgettable memories.</p>
+            <a href="#" class="explore-btn">Explore Now</a>
+        </div>
+
+        <form class="enquiry-form">
+            <div class="input-container">
+                <i class="fas fa-user"></i>
+                <input type="text" placeholder="Name" required>
+            </div>
+
+            <div class="input-container">
+                <i class="fas fa-envelope"></i>
+                <input type="email" placeholder="Email" required>
+            </div>
+            <div class="input-container">
+                <i class="fas fa-map-marker-alt"></i>
+                <input placeholder="Destination" required>
+            </div>
+            <button type="submit" class="submit-btn">ENQUIRE NOW</button>
+        </form>
+
+    </section>
     
-    <h1>Welcome to Our Travel Agency</h1>
-    <p>Your adventure starts here!</p>
+
 </body>
 </html>
