--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
         </div>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
-                <li><a href="#about">About Us</a></li>
+                <li><a href="index.html" class="active">Home</a></li>
+                <li><a href="about.html">About Us</a></li>
                 <li><a href="#services">Tour Packages</a></li>
                 <li><a href="#contact">Contact</a></li>
             </ul>
