contact.html,styles added

--- a/about.html
+++ b/about.html
@@ -18,7 +18,7 @@
             <li><a href="index.html" class="nav-item">Home</a></li>
             <li><a href="about.html" class="nav-item">About Us</a></li>
             <li><a href="#" class="nav-item">Tours</a></li>
-            <li><a href="#" class="nav-item">Contact Us</a></li>
+            <li><a href="contact.html" class="nav-item">Contact Us</a></li>
           </ul>
         </nav>
         <a href="#" class="book-btn">Book Now</a>
