--- a/index.html
+++ b/index.html
@@ -272,8 +272,8 @@
                     <div class="footer-column">
                         <h3>Office</h3>
                         <ul>
-                            <li><i class="fa-solid fa-phone"></i> +91 9744339500</li>
-                            <li><i class="fa-solid fa-envelope"></i> trip@gmail.com</li>
+                            <li><i class="fa-solid fa-phone"></i> +91 4561234789</li>
+                            <li><i class="fa-solid fa-envelope"></i> contact@pickyourtravel.com</li>
                             <li><i class="fa-solid fa-map-pin"></i> 152 King Eagle, Cambridge</li>
                         </ul>
                     </div>
