--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
         <div class="hero-content">
             <p class="subtitle">Top Travel Companies in Kerala</p>
             <h1>Experience The World Like Never Before</h1>
-            <a href="#" class="cta-btn pulse-btn">Let's Go Now</a>
+            <a href="#" class="cta-btn-home pulse-btn">Let's Go Now</a>
         </div>
 
         <form class="enquiry-form">
