--- a/index.html
+++ b/index.html
@@ -19,11 +19,11 @@
             <ul class="nav-links">
                 <li><a href="index.html" class="nav-item">Home</a></li>
                 <li><a href="about.html" class="nav-item">About Us</a></li>
-                <li><a href="#" class="nav-item">Tours</a></li>
+                <li><a href="service.html" class="nav-item">Tours</a></li>
                 <li><a href="contact.html" class="nav-item">Contact Us</a></li>
             </ul>
         </nav>
-        <a href="#" class="book-btn">Book Now</a>
+        <a href="contact.html" class="book-btn">Book Now</a>
         <div class="menu-toggle">
             <i class="fas fa-bars"></i>
         </div>
@@ -283,7 +283,7 @@
             <div class="footer-bottom">
 
                 <div class="footer-info">
-                    <p>Group 1 @ 2025</p>
+                    <p>Pick Your Travel All Rights Reserved @ 2025 Group 1 @ 2025</p>
                 </div>
             </div>
         </div>
