--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Contact Us | Pick Your Travel</title>
   <link rel="stylesheet" href="css/styles.css" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
 </head>
+
 <body>
 
   <header>
@@ -18,23 +20,22 @@
       <ul class="nav-links">
         <li><a href="index.html" class="nav-item">Home</a></li>
         <li><a href="about.html" class="nav-item">About Us</a></li>
-        <li><a href="#" class="nav-item">Tours</a></li>
+        <li><a href="service.html" class="nav-item">Tours</a></li>
         <li><a href="contact.html" class="nav-item">Contact Us</a></li>
       </ul>
     </nav>
-    <a href="#" class="book-btn">Book Now</a>
+    <a href="contact.html" class="book-btn">Book Now</a>
     <div class="menu-toggle">
       <i class="fas fa-bars"></i>
     </div>
   </header>
-
   <section class="hero-contact">
     <div class="overlay"></div>
     <div class="hero-content">
       <h1>Contact Us</h1>
       <p class="subtitle">Let's plan your dream vacation together</p>
     </div>
-  </section> 
+  </section>
 
   <main class="contact-page">
     <div class="section-title">
@@ -112,10 +113,11 @@
       </div>
       <div class="footer-bottom">
         <div class="footer-info">
-          <p>Group 1 @ 2025</p>
+          <p>Pick Your Travel All Rights Reserved @ 2025 Group 1 @ 2025</p>
         </div>
       </div>
     </div>
   </footer>
 </body>
+
 </html>
